--- a/deployment.yaml
+++ b/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: portfolio-deployment
 spec:
-  replicas: 1  # Number of instances of your application
+  replicas: 1 
   selector:
     matchLabels:
       app: portfolio
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: portfolio
-        image: mohammedhomman/medhomman-portfolio:latest  # Replace with your Docker Hub image
+        image: mohammedhomman/medhomman-portfolio:latest  
         ports:
-        - containerPort: 80  # The port your container listens on
+        - containerPort: 80 
